crates/sui-adapter-transactional-tests/tests/shared/by_value_shared_object_deletion_via_make_move_vec_fails.exp
processed 22 tasks

task 1 'publish'. lines 6-97:
Error: error[E03002]: unbound module
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmp5zSv85:10:9
   │
10 │     use sui::sui::SUI;
   │         ^^^^^^^^ Invalid 'use'. Unbound module: 'sui::sui'

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmp5zSv85:16:50
   │
16 │         transfer::public_share_object(coin::zero<BFC>(ctx))
   │                                                  ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmp5zSv85:18:45
   │
18 │     public fun pop_coin(mut o2: vector<Coin<BFC>>): Coin<BFC> {
   │                                             ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmp5zSv85:18:58
   │
18 │     public fun pop_coin(mut o2: vector<Coin<BFC>>): Coin<BFC> {
   │                                                          ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmp5zSv85:76:36
   │
76 │     public fun share_coin(o2: Coin<BFC>) {
   │                                    ^^^ Unbound type 'BFC' in current scope



task 2 'run'. lines 99-99:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'run'. lines 101-101:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 4 'view-object'. lines 103-103:
Error: task 4, lines 103-103. Unbound fake id 2,0

task 5 'view-object'. lines 105-107:
Error: task 5, lines 105-105. Unbound fake id 3,0

task 6 'programmable'. lines 108-112:
Error: INVALID TEST. Unknown object, object(2,0)

task 7 'programmable'. lines 113-117:
Error: INVALID TEST. Unknown object, object(2,0)

task 8 'programmable'. lines 118-122:
Error: INVALID TEST. Unknown object, object(2,0)

task 9 'programmable'. lines 123-127:
Error: INVALID TEST. Unknown object, object(2,0)

task 10 'programmable'. lines 128-133:
Error: INVALID TEST. Unknown object, object(2,0)

task 11 'programmable'. lines 134-139:
Error: INVALID TEST. Unknown object, object(2,0)

task 12 'programmable'. lines 140-145:
Error: INVALID TEST. Unknown object, object(2,0)

task 13 'programmable'. lines 146-151:
Error: INVALID TEST. Unknown object, object(2,0)

task 14 'programmable'. lines 152-155:
Error: INVALID TEST. Unknown object, object(3,0)

task 15 'run'. lines 157-157:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 16 'view-object'. lines 159-162:
Error: task 16, lines 159-159. Unbound fake id 15,0

task 17 'programmable'. lines 163-169:
Error: INVALID TEST. Unknown object, object(15,0)

task 18 'programmable'. lines 170-178:
Error: INVALID TEST. Unknown object, object(15,0)

task 19 'programmable'. lines 179-187:
Error: INVALID TEST. Unknown object, object(15,0)

task 20 'programmable'. lines 188-195:
Error: INVALID TEST. Unknown object, object(15,0)

task 21 'programmable'. lines 196-201:
Error: INVALID TEST. Unknown object, object(15,0)
